@@ -1,3 +1,11 @@
+2002-10-03  Jody Goldberg <jody@gnome.org>
+
+	http://bugzilla.gnome.org/show_bug.cgi?id=93211
+	* file-types-capplet.c (edit_count_cb) : delete.
+	(selection_count_cb) : rename from remove_count_cb.
+	(selection_changed_cb) : simplify code, disable edit button for
+	  catagories.
+
 2002-10-01  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.1.0.1
